tests/baselines/reference/decoratorMetadata-jsdoc.errors.txt
tests/cases/conformance/decorators/decoratorMetadata-jsdoc.ts(5,9): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string | undefined'?
tests/cases/conformance/decorators/decoratorMetadata-jsdoc.ts(7,9): error TS17019: Adding a postfix '!' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string'?


==== tests/cases/conformance/decorators/decoratorMetadata-jsdoc.ts (2 errors) ====
    declare var decorator: any;
    
    class X {
        @decorator()
        a?: string?;
            ~~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string | undefined'?
        @decorator()
        b?: string!;
            ~~~~~~~
!!! error TS17019: Adding a postfix '!' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string'?
        @decorator()
        c?: *;
    }